// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Form Input checkbox renders correctly 1`] = `
<div
  class="form-check"
>
  <input
    aria-describedby="helperText"
    class="form-check-input"
    id="example-form-input-1"
    type="checkbox"
  />
  <label
    class="form-check-label"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</div>
`;

exports[`OE - Form Input radio renders correctly 1`] = `
<div
  class="form-check"
>
  <input
    aria-describedby="helperText"
    class="form-check-input"
    id="example-form-input-1"
    type="radio"
  />
  <label
    class="form-check-label"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</div>
`;

exports[`OE - Form Input renders correctly 1`] = `
<label
  class="form-label"
  for="example-form-input-1"
>
  Example form input
</label>
`;

exports[`OE - Form Input renders correctly when disabled 1`] = `
<label
  class="form-label"
  for="example-form-input-1"
>
  Example form input
</label>
`;

exports[`OE - Form Input renders correctly when horizontal 1`] = `
<div
  class="row"
>
  <label
    class="col-form-label col-sm-2"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <div
    class="col-sm-10"
  >
    <input
      aria-describedby="helperText"
      class="form-control form-control-sm"
      id="example-form-input-1"
      type="text"
    />
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</div>
`;

exports[`OE - Form Input renders correctly when invalid 1`] = `
<label
  class="form-label"
  for="example-form-input-1"
>
  Example form input
</label>
`;

exports[`OE - Form Input renders correctly when readonly 1`] = `
<label
  class="form-label"
  for="example-form-input-1"
>
  Example form input
</label>
`;

exports[`OE - Form Input renders correctly when required 1`] = `
<label
  class="form-label"
  for="example-form-input-1"
>
  Example form input
</label>
`;

exports[`OE - Form Input renders correctly with floating label 1`] = `
<div
  class="form-floating"
>
  <input
    aria-describedby="helperText"
    class="form-control form-control-sm"
    id="example-form-input-1"
    type="text"
  />
  <label
    class="form-label"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</div>
`;

exports[`OE - Form Input switch renders correctly 1`] = `
<div
  class="form-check form-switch"
>
  <input
    aria-describedby="helperText"
    class="form-check-input"
    id="example-form-input-1"
    type="checkbox"
  />
  <label
    class="form-check-label"
    for="example-form-input-1"
  >
    Example form input
  </label>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the form input
  </div>
</div>
`;
